<resources>
    <string name="app_name">PlanBuilder</string>
    <string name="add_new_entry">Pressione \'+\' para nova ficha</string>
    <string name="add_new_exercise">+ Adicionar novo exercício</string>

    <string name="btn_save">Salvar</string>

    <string name="content_description_iv_program">Ícone representando um halter</string>

    <string name="hint_dialog_exercise_name">Nome do exercício</string>
    <string name="hint_new_program_name">Nome</string>
    <string name="hint_new_program_start_date">Início</string>
    <string name="hint_new_program_end_date">Término</string>

    <string name="label_exercises">Exercícios</string>
    <string name="label_exercise_name">Nome do exercício</string>
    <string name="label_exercise_reps">Reps.</string>
    <string name="label_exercise_weight">Peso(kg)</string>
    <string name="label_program_detail_start_date">Início:</string>
    <string name="label_program_detail_end_date">Término:</string>

    <string name="new_entry">Nova ficha</string>

    <string name="title_error">Insiria um título válido</string>
    <string name="remove">remove</string>
</resources>
