<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="16dp"
    tools:layout_editor_absoluteX="16dp"
    android:orientation="vertical"
    android:paddingLeft="48dp"
    android:paddingRight="48dp"
    android:gravity="center_horizontal">


    <EditText
        android:id="@+id/et_exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:paddingBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_dialog_exercise_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/et_exercise_reps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="5"
            android:hint="@string/label_exercise_reps"
            android:inputType="number"
            android:maxLength="3"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"/>

        <EditText
            android:id="@+id/et_exercise_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="5"
            android:hint="@string/label_exercise_weight"
            android:inputType="number"
            android:maxLength="3" />

    </LinearLayout>



</LinearLayout>