<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/root_viewgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="co.fddittmar.planbuilder.view.NewProgramActivity">

        <EditText
            android:id="@+id/et_program_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="64dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:hint="@string/hint_new_program_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="64dp" />

        <EditText
            android:id="@+id/et_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:hint="@string/hint_new_program_start_date"
            android:inputType="date"
            android:textAlignment="center"
            android:focusable="false"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_program_title"
            android:layout_marginLeft="18dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="18dp" />

        <EditText
            android:id="@+id/et_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:hint="@string/hint_new_program_end_date"
            android:inputType="date"
            android:textAlignment="center"
            android:focusable="false"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_start_date"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp" />

        <TextView
            style="@style/Title"
            android:id="@+id/tv_exercises_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_exercises"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/et_end_date"
            android:layout_marginStart="16dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_exercises_title"
            android:id="@+id/linearLayout"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/tv_label_exercise_name"
                style="@style/BoldedSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="10"
                android:text="@string/label_exercise_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_exercises_title" />

            <TextView
                android:id="@+id/tv_label_exercise_reps"
                style="@style/BoldedSubtitle"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/label_exercise_reps"
                app:layout_constraintRight_toLeftOf="@+id/tv_label_exercise_weight"
                app:layout_constraintTop_toBottomOf="@+id/tv_exercises_title" />

            <TextView
                style="@style/BoldedSubtitle"
                android:id="@+id/tv_label_exercise_weight"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/label_exercise_weight"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_exercises_title" />

        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list_exercises"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <FrameLayout
            android:id="@+id/container_add_exercise"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/dashed_box"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rv_list_exercises">

            <TextView
                android:id="@+id/tv_new_exercise"
                style="@style/NewEntryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/add_new_exercise" />
        </FrameLayout>

        <Button
            style="@style/SaveButton"
            android:id="@+id/btn_save_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/btn_save"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/container_add_exercise"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
