<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        style="@style/Title"
        android:id="@+id/tv_program_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Programa"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        style="@style/BoldedSubtitle"
        android:id="@+id/tv_label_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_program_detail_start_date"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_program_title"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_label_end_date"
        style="@style/BoldedSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_program_detail_end_date"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_start_date" />

    <TextView
        android:id="@+id/tv_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="01/07/2017"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_date"
        app:layout_constraintLeft_toRightOf="@+id/tv_label_end_date"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/tv_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="31/07/2017"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_program_title"
        app:layout_constraintLeft_toRightOf="@+id/tv_label_start_date"
        android:layout_marginLeft="8dp" />

    <TextView
        style="@style/Title"
        android:id="@+id/tv_exercises_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_exercises"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_end_date"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_exercises_title"
        android:id="@+id/linearLayout"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0">

        <TextView
            android:id="@+id/tv_label_exercise_name"
            style="@style/BoldedSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="10"
            android:text="@string/label_exercise_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_exercises_title" />

        <TextView
            android:id="@+id/tv_label_exercise_reps"
            style="@style/BoldedSubtitle"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/label_exercise_reps"
            app:layout_constraintRight_toLeftOf="@+id/tv_label_exercise_weight"
            app:layout_constraintTop_toBottomOf="@+id/tv_exercises_title" />

        <TextView
            style="@style/BoldedSubtitle"
            android:id="@+id/tv_label_exercise_weight"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/label_exercise_weight"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_exercises_title" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_list_exercises"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>
