<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vg_program_item"
    android:background="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="110dp">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/content_description_iv_program"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:srcCompat="@drawable/ic_fitness_center_black_36px"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        tools:layout_editor_absoluteY="28dp" />

    <TextView
        style="@style/Title"
        android:id="@+id/tv_program_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Primeiro programa"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"/>

    <TextView
        style="@style/BoldedSubtitle"
        android:id="@+id/tv_label_program_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_program_detail_start_date"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_program_title"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"/>

    <TextView
        style="@style/BoldedSubtitle"
        android:id="@+id/tv_label_program_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_program_detail_end_date"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_program_start_date" />

    <TextView
        style="@style/ProgramDate"
        android:id="@+id/tv_program_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="01/07/2017"
        app:layout_constraintLeft_toRightOf="@+id/tv_label_program_start_date"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_program_title" />

    <TextView
        style="@style/ProgramDate"
        android:id="@+id/tv_program_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="31/07/2017"
        app:layout_constraintLeft_toRightOf="@+id/tv_label_program_end_date"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_program_start_date"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp" />
</android.support.constraint.ConstraintLayout>